--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -28,6 +28,7 @@
     "@zica-ui/eslint-config": "*",
     "@zica-ui/react": "*",
     "@zica-ui/tokens": "*",
+    "phosphor-react": "^1.4.1",
     "polished": "^4.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
