--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -25,6 +25,7 @@
     "vite": "^4.1.4"
   },
   "dependencies": {
+    "@storybook/addon-a11y": "^6.5.16",
     "@zica-ui/eslint-config": "*",
     "@zica-ui/react": "*",
     "@zica-ui/tokens": "*",
